--- a/AdvancedNodeStarter-master/package.json
+++ b/AdvancedNodeStarter-master/package.json
@@ -9,7 +9,10 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "NPM_CONFIG_PRODUCTION=false npm install --legacy-peer-deps --prefix client && npm run build --prefix client",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "start:redis": "brew services start redis",
+    "stop:redis": "brew services stop redis",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -26,7 +29,7 @@
     "passport": "0.3.2",
     "passport-google-oauth20": "2.0.0",
     "path-parser": "2.0.2",
-    "puppeteer": "1.3.0",
+    "puppeteer": "8.0.0",
     "redis": "2.8.0",
     "uuid": "3.2.1"
   }
