test(section-5): ensure blog form is rendered after float button click in blogs page

--- a/AdvancedNodeStarter-master/package.json
+++ b/AdvancedNodeStarter-master/package.json
@@ -15,7 +15,7 @@
     "heroku-postbuild": "npm run build",
     "start:redis": "brew services start redis",
     "stop:redis": "brew services stop redis",
-    "test": "jest"
+    "test": "jest --testEnvironment=node --verbose"
   },
   "author": "",
   "license": "ISC",
