--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,13 +34,15 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install Dependencies
+      - name: ⏩ Enter in AdvancedNodeStarter directory
+        run: cd AdvancedNodeStarter
+      - name: 💿 Install Dependencies
         run: |
           npm install --legacy-peer-deps
           npm run build
-      - name: Start server
+      - name: 🟢 Start server
         run: |
           nohup npm run start &
           sleep 3
-      - name: Run tests
+      - name: ✅ Run tests
         run: npm run test
