--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,15 +34,17 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: ⏩ Enter in AdvancedNodeStarter directory
-        run: cd AdvancedNodeStarter
       - name: 💿 Install Dependencies
         run: |
+          cd AdvancedNodeStarter
           npm install --legacy-peer-deps
           npm run build
       - name: 🟢 Start server
         run: |
+          cd AdvancedNodeStarter
           nohup npm run start &
           sleep 3
       - name: ✅ Run tests
-        run: npm run test
+        run: |
+          cd AdvancedNodeStarter
+          npm run test
